--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -31,6 +31,7 @@ jobs:
       run: |
         source .venv/bin/activate
         pip install poetry
+        rm poetry.lock
         poetry install --no-interaction --no-root
     - name: Install the app 📲🚀
       run: |
