--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -77,6 +77,6 @@ jobs:
         name: python-package-distributions
         path: dist/
     - name: Cast the Publish Spell 📦 to TestPyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
+      uses: pypa/gh-action-pypi-publish@67339c736fd9354cd4f8cb0b744f2b82a74b5c70
       with:
         repository-url: https://test.pypi.org/legacy/
