--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "asgi-request-duration"
-version = "1.0.3"
+version = "1.0.4"
 description = "A asgi middleware to measure the request duration"
 authors = ["Fabio Greco <fabio.greco.github@gmail.com>"]
 maintainers = ["Fabio Greco <fabio.greco.github@gmail.com>"]
@@ -44,8 +44,8 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.11"
-starlette = "^0.43.0"
+python = ">=3.11,<4.0"
+starlette = ">=0.45.3"
 
 [tool.poetry.group.dev.dependencies]
 uvicorn = "*"
