update pytest configuration to enable verbose output and set asyncio fixture settings

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,7 @@
 [pytest]
-addopts = --strict-markers --maxfail=3 --tb=short -p no:cacheprovider
+addopts = --strict-markers --maxfail=3 --tb=short -p no:cacheprovider --verbose
+asyncio_default_fixture_loop_scope = function
+asyncio_mode = auto
 python_classes = Test*
 python_files = test_*.py
 python_functions = test_*
